Coverity analysis defect 171612: Uninitialized pointer field

XMLWordPrintableJSON

    • Networking & Observability
    • Fully Compatible
    • ALL
    • N&O 2025-03-31, N&O 2025-04-14, N&O 2025-04-28, N&O 2025-05-12, N&O 2025-05-26, N&O 2025-06-09, N&O 2025-06-23, N&O 2025-07-07, N&O 2025-07-21
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized pointer field

      The pointer field will point to an arbitrary memory location, any attempt to write may cause corruption. A pointer field is not initialized in the constructor
      /data/mci/8df2c396557fb87fa29efdf21060b868/bazel_cache/18545ad5d47fdc81034b726533d3cf62/execroot/_main_/src/mongo/executor/pooled_async_client_factory.h:172: UNINIT_CTOR 171612 Class member declaration for "_tl".
      /data/mci/8df2c396557fb87fa29efdf21060b868/bazel_cache/18545ad5d47fdc81034b726533d3cf62/execroot/_main_/src/mongo/executor/pooled_async_client_factory.h:60: UNINIT_CTOR 171612 Non-static class member "_tl" is not initialized in this constructor nor in any functions that it calls.

            Assignee:
            Michael Popov (Inactive)
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: