SERVER-102221 Setting default value for the class member pointer (#34317)

GitOrigin-RevId: 2abb66476b49037644255216aee2ba1d75ec81e0