src/mongo/executor/pooled_async_client_factory.h
@@ -169,7 +169,7 @@ private:
     };
 
     std::string _name;
-    transport::TransportLayer* _tl;
+    transport::TransportLayer* _tl = nullptr;
     ConnectionPool::Options _poolOpts;
     std::unique_ptr<NetworkConnectionHook> _onConnectHook;
     std::shared_ptr<ConnectionPool> _pool;
